// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar renders properly even if the progress is > 100 1`] = `
<div
  className="theme-base"
>
  <div
    className="progressBar"
    style={
      Object {
        "height": "50px",
      }
    }
  >
    <div
      className="progress"
      style={
        Object {
          "fontSize": "undefinedpx",
          "lineHeight": "50px",
          "width": "100%",
        }
      }
    >
      100%
    </div>
  </div>
</div>
`;

exports[`ProgressBar renders properly using all available props 1`] = `
<div
  className="theme-base"
>
  <div
    className="progressBar"
    style={
      Object {
        "backgroundColor": "green",
        "height": "40px",
      }
    }
  >
    <div
      className="progress"
      style={
        Object {
          "backgroundColor": "red",
          "color": "yellow",
          "fontSize": "30px",
          "lineHeight": "40px",
          "width": "45%",
        }
      }
    >
      45%
    </div>
  </div>
</div>
`;

exports[`ProgressBar renders properly with just progress value 1`] = `
<div
  className="theme-base"
>
  <div
    className="progressBar"
    style={
      Object {
        "height": "50px",
      }
    }
  >
    <div
      className="progress"
      style={
        Object {
          "fontSize": "undefinedpx",
          "lineHeight": "50px",
          "width": "10%",
        }
      }
    />
  </div>
</div>
`;

exports[`ProgressBar renders properly with just progress value and display number on true 1`] = `
<div
  className="theme-base"
>
  <div
    className="progressBar"
    style={
      Object {
        "height": "50px",
      }
    }
  >
    <div
      className="progress"
      style={
        Object {
          "fontSize": "undefinedpx",
          "lineHeight": "50px",
          "width": "40%",
        }
      }
    >
      40%
    </div>
  </div>
</div>
`;

exports[`ProgressBar renders properly with no props 1`] = `
<div
  className="theme-base"
>
  <div
    className="progressBar"
    style={
      Object {
        "height": "50px",
      }
    }
  >
    <div
      className="progress"
      style={
        Object {
          "fontSize": "undefinedpx",
          "lineHeight": "50px",
          "width": "0%",
        }
      }
    />
  </div>
</div>
`;
